--- a/index.html
+++ b/index.html
@@ -25,8 +25,23 @@
 
     </div>
 </nav>
-<h1>Hello, world!</h1>
+<div class="container">
+    <h1>The Dolphins</h1>
+</div>
 
+<footer class="page-footer font-small special-color-dark pt-4 fixed-bottom">
+
+    <!-- Footer Elements -->
+    <div class="container">
+
+    </div>
+
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a href="https://mdbootstrap.com/"> Maxime, Kamil</a>
+    </div>
+</footer>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
