add plug the power

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
     </div>
 </nav>
-<div class="container">
+<div class="container-fluid">
     <h1>All datacenters</h1>
 
-    <div class=" mt-5 table-responsive">
+    <div class=" mt-5 table-responsive w-90">
         <table class="table table-striped ">
             <thead>
             <tr>
@@ -39,6 +39,7 @@
                 <th>provider</th>
                 <th>inIsolation</th>
                 <th>go to errors</th>
+                <th>Isolate</th>
             </tr>
             </thead>
             <tbody>
@@ -46,7 +47,6 @@
         </table>
     </div>
 </div>
-
 
 <footer class="page-footer font-small special-color-dark pt-4">
 
