--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" id="log" href="#"> <span class="sr-only">(current)</span></a>
+            </li>
+        </ul>
+
+    </div>
 </nav>
 <div class="container-fluid">
     <h1>All datacenters</h1>
